[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="VBoxContainer"]
pause_mode = 2
visible = false
margin_left = -68.8247
margin_top = -90.4391
margin_right = 69.1753
margin_bottom = -22.4391
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
margin_right = 138.0
margin_bottom = 20.0
text = "Resume Game"

[node name="ResetButton" type="Button" parent="."]
margin_top = 24.0
margin_right = 138.0
margin_bottom = 44.0
text = "Reset Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreenButton" type="Button" parent="."]
margin_top = 48.0
margin_right = 138.0
margin_bottom = 68.0
text = "Back to Title Screen"
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
